--- a/tp2/TP2_lemoele_petitbop/src/Makefile
+++ b/tp2/TP2_lemoele_petitbop/src/Makefile
@@ -5,17 +5,17 @@ SRC 	=	$(wildcard *.cpp)
 OBJ 	=	$(SRC:%.cpp=%.o)
 HEAD 	=	$(wildcard *.h)
 
-CXX 	=	g++
-CFLAGS 	=	-Wall -Wextra -g 
+CXX 		=	g++
+CXXFLAGS 	=	-Wall -Wextra -g 
 
 # Generating all executable files
 all: $(EXEC)
 
 $(EXEC): $(OBJ)
-	$(CXX) -o $@ $(CFLAGS) $^
+	$(CXX) -o $@ $(CXXFLAGS) $^
 
 $(SRCFILE)/%.o: ($SRCFILE)/%.cpp ($SRCFILE)/%.h
-	$(CXX) -o $@ $(CFLAGS) -c $< 
+	$(CXX) -o $@ $(CXXFLAGS) -c $< 
 
 # Executing all executable files
 check: 
